# ResumeCraftr

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  temp_check.tex
docs/: CNAME  _config.yml  getting_started.md  index.html
examples/: resumecraftr_example.sh
resumecraftr/: test.py
resumecraftr/cli/: agent.py  main.py
resumecraftr/cli/cmd/: add_job.py  create_cv.py  export_pdf.py  extract.py  extract_pdf.py  import_cv.py  jobs_desc.py  latex.py  new_cv.py  parse_cv.py  pdf.py  resume.py  sections.py  setup.py  tailor_cv.py  tex_to_pdf.py
resumecraftr/cli/prompts/: pdf.py  resume.py  sections.py
resumecraftr/cli/utils/: json.py
resumecraftr/templates/: eisvogel.latex  resume_template.md  resume_template.tex  sections.json
